<resources>
    <string name="app_name">Android-ESP32</string>
    <string name="exit_but">Exit</string>
    <string name="launch_graph">Graph</string>
    <string name="graph_build">Build Graph</string>
    <string name="logs">Check Logs</string>
    <string name="close">Back to menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request">Request</string>
    <string name="save">Settings</string>
    <string name="instruction">1.Turn off mobile internet\n2.Choose Wifi by click wi-fi button\n3.If not SCT Wi-Fi then enter IP in special field(if SCT leave it empty)\n3.Enter params in fields\n4.Click next</string>
    <string name="add_to_database">Add to DataBase</string>
    <string name="save_to_db">Save To DB</string>
    <string name="wifi">Wi-FI</string>
    <string name="ip">IP field</string>
    <string name="in">IN field</string>
    <string name="raise">Raise Field</string>
    <string name="from">From Field</string>
    <string name="to">TO field</string>
    <string name="step">Step Field</string>
    <string name="next">Next</string>
    <string name="first_table">Tables with saved values</string>
    <string name="second_table">Tables with measurments</string>
    <string name="DataBase">DataBase</string>
    <string name="drawGraph">Draw Graph</string>

</resources>