<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/request"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="53dp"
        android:text="@string/request"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/textView2"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph"
  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="136dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="42dp"
        android:background="#918C8C"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <Button
        android:id="@+id/save"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="53dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/addToDB"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request" />

    <Button
        android:id="@+id/addToDB"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="45dp"
        android:text="@string/add_to_database"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

</androidx.constraintlayout.widget.ConstraintLayout>